<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.juanjo.rideapp.Login.Registro"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectangulo_transparente"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inicio_registro"
                android:textColor="@color/esloganColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"/>
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/registro_usuario"
                android:background="@drawable/cuadrado_redondo_login_usuario"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:drawableStart="@mipmap/usuariologin"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/loginusuario"
                android:duplicateParentState="false"
                android:layout_marginBottom="15dp"/>
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/contrasena_registro"
                android:textColorHint="@color/blanco"
                android:background="@drawable/cuadrado_redondo_login_contrasena"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:drawableStart="@mipmap/contrasenalogin"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:textColor="@color/blanco"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textPassword"
                android:id="@+id/logincontraseña"
                android:layout_marginBottom="15dp"/>
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/repetir_contrasena_registro"
                android:textColorHint="@color/blanco"
                android:background="@drawable/cuadrado_redondo_login_contrasena"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:drawableStart="@mipmap/contrasenalogin"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:textColor="@color/blanco"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textPassword"
                android:id="@+id/loginrepetircontraseña"
                android:layout_marginBottom="15dp"/>
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/nombre_registro"
                android:background="@drawable/cuadrado_redondo_login_nombre"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:drawableStart="@mipmap/usuariologin"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/loginnombre"
                android:layout_marginBottom="15dp"
                android:inputType="textPersonName"/>
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/apellidos_registro"
                android:background="@drawable/cuadrado_redondo_login_apellidos"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:drawableStart="@mipmap/usuariologin"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/loginapellidos"
                android:layout_marginBottom="15dp"/>
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/correo_registro"
                android:background="@drawable/cuadrado_redondo_login_correo"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:drawableStart="@mipmap/correo"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/logincorreo"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/botonsign"
                android:onClick="anadir"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/registro_boton"
                android:textColor="@color/blanco"
                android:textStyle="normal" />


        </LinearLayout>


</RelativeLayout>
